clusters/management-cluster/manifests/nginx/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: hashicorp/http-echo
        args:
        - "-text=Welcome to App1"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: demo
spec:
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 5678
