clusters/management-cluster/manifests/nginx/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: hashicorp/http-echo
        args:
        - "-text=Welcome to App3"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: app3-service
  namespace: demo
spec:
  selector:
    app: app3
  ports:
  - port: 80
    targetPort: 5678
