clusters/management-cluster/manifests/nginx/app4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app4
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app4
  template:
    metadata:
      labels:
        app: app4
    spec:
      containers:
      - name: app4
        image: hashicorp/http-echo
        args:
        - "-text=Welcome to App4"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: app4-service
  namespace: demo
spec:
  selector:
    app: app4
  ports:
  - port: 80
    targetPort: 5678
