clusters/management-cluster/manifests/nginx/pathingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress
  namespace: demo
spec:
  ingressClassName: nginx
  rules:
  - host: srikarnginx.kuberox.net
    http:
      paths:
      - path: /app3
        pathType: Prefix
        backend:
          service:
            name: app3-service
            port:
              number: 80
      - path: /app4
        pathType: Prefix
        backend:
          service:
            name: app4-service
            port:
              number: 80
